--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.6.8",
     "expo": "~51.0.5",
+    "expo-camera": "~15.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
@@ -34,8 +36,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.8"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
