--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -10,5 +10,9 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+
+volumes:
+  dev-static-data:
