--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9-alpine3.13
+FROM python:3.9-slim-buster
 LABEL maintainer="Maria Amanda"
 
 ENV PYTHONUNBUFFERED 1
@@ -10,16 +10,24 @@ WORKDIR /app
 EXPOSE 8000
 
 ARG DEV=false
-RUN python -m venv /py && \
-    /py/bin/pip install --upgrade pip && \
-    apk add --update --no-cache jpeg-dev && \
-    apk add --update --no-cache --virtual .tmp-build-deps zlib zlib-dev && \
-    /py/bin/pip install -r /tmp/requirements.txt && \
+RUN apt-get update && \
+    apt-get install -y \
+    build-essential \
+    cmake \
+    libboost-python-dev \
+    libboost-system-dev \
+    libjpeg-dev \
+    zlib1g-dev && \
+    pip install --upgrade pip && \
+    pip install -r /tmp/requirements.txt && \
     if [ $DEV = "true" ]; \
-        then /py/bin/pip install -r /tmp/requirements.dev.txt ; \
+        then pip install -r /tmp/requirements.dev.txt ; \
     fi && \
+    apt-get remove -y build-essential cmake && \
+    apt-get autoremove -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
     rm -rf /tmp && \
-    apk del .tmp-build-deps && \
     adduser \
         --disabled-password \
         --no-create-home \
@@ -28,7 +36,5 @@ RUN python -m venv /py && \
     mkdir -p /vol/web/static && \
     chown -R django-user:django-user /vol && \
     chmod -R 755 /vol
-
-ENV PATH="/py/bin:$PATH"
 
 USER django-user
