--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,3 +3,5 @@ djangorestframework>=3.12.4,<3.13
 drf-spectacular>=0.15.1,<0.16
 django-cors-headers>=4.3.1,<4.4
 Pillow>=10.2.0,<10.3
+dlib>=19.24.0,<19.25
+face-recognition>=1.3,<1.4
